# HRM

./: .git-commit.txt  .gitignore  AGENTS.md  README.md  evaluate_hybrid.py  requirements.txt  train_hybrid.py
dataset/: build_text_dataset.py
hybrid/: .git-commit.txt  .gitignore  AGENTS.md  CUDA.md  FP8.md  README.md  REASON-TRAINING.md  RWKV.md  TRAINING.md  chat_template.py  chat_template.txt  llm.state  llm.state.bak  llm_run_forward.py  pyproject.toml  requirements.txt
hybrid/docs/: HRM_LM_Integration_Design.md
hybrid/runs/test-1/best-model/: best.yaml  meta.json
hybrid/scripts/: build_reasoning_dataset.py  capture_nsight.py  chunk_text_dataset.py  download_dataset_slice.py  filter_jsonl.py  install_transformer_engine.sh  merge_prepared_batches.py  normalize_qa_dataset.py  prepare_dataset.py  prepare_language_dataset.py  run_demo.sh  setup.sh  setup_rwkv_env.sh
hybrid/src/hrm_lm/configs/: default.yaml  fp8.yaml  moe.yaml  rwkv7_lora.yaml  stage_b.yaml
hybrid/src/hrm_lm/data/: __init__.py  simple_tokenizer.py  synthetic.py
hybrid/src/hrm_lm/inference/: __init__.py  generate.py
hybrid/src/hrm_lm/models/: bridges.py  decoder.py  encoder.py  hrm_core.py  hybrid.py  mamba2_layers.py  rwkv6_layers.py  rwkv7_backend.py  transformer_layers.py
hybrid/src/hrm_lm/models/rwkv_cuda/: wkv6_cuda_v1a.cu  wkv6_op.cpp
hybrid/src/hrm_lm/tokenizers/: __init__.py  rwkv.py
hybrid/src/hrm_lm/training/: optim_factory.py  train.py
hybrid/src/hrm_lm/utils/: common.py
hybrid/tests/: test_bridges.py  test_forward.py  test_memory.py
models/: adapters.py  (+2 more)
(+4 files in other folders)
