[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hrm-lm"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "einops>=0.7",
  "omegaconf>=2.3",
  "tokenizers>=0.15",
  "sentencepiece>=0.1.99",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
